--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "graphql": "^16.6.0",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
+    "openai": "^3.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
