--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "concurrently": "^5.1.0"
   },
   "dependencies": {
+    "apollo-server-express": "^2.25.3",
+    "express": "^4.17.2",
+    "graphql": "^15.8.0",
     "dotenv": "^16.0.3",
     "openai": "^3.1.0"
   }
